# board_test_cli

./: .gitignore  CMakeLists.txt  README.md  board_test_cli.code-workspace
documentation/: boardtestcli_sequence_diagram.txt  requirements.md
modules/mimxrt685/boards/: mimxrt685_evk_mimxrt685s_cm33.overlay
modules/nrf/: prj.conf  usb-overlay.conf  usb.overlay
modules/nrf/boards/: nrf52_adafruit_feather.overlay
modules/nucleo_f756zg/: CMakeLists.txt  prj.conf
modules/south_carolina/: prj.conf
python/: test.py  zshell.py
src/: cli_commands.c  cli_handler.c  cli_sync.c
